hphp/hack/test/typecheck/array_cast1.php.exp
File "array_cast1.php", line 4, characters 8-16:
(array) cast forbidden; arrays with unspecified key and value types are not allowed (Typing[4007])
